--- a/style.css
+++ b/style.css
@@ -127,6 +127,11 @@ body{
 	padding-top: 10px;
 }
 
+.footer p{
+	text-align: center;
+	margin-top: 10px;
+}
+
 .footer2{
 	background-color: darkred;
 	height: 8;
@@ -152,8 +157,13 @@ body{
 	text-align: center;
 	color: white;
 	padding-top: 10px;
-	padding-bottom: 25px;
+	padding-bottom: 20px;
 	margin-top: 120px;
+}
+
+.footer4 p{
+	text-align: center;
+	margin-top: 5px;
 }
 
 .footer2 p{
