--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap'); /* font-family: 'Roboto', sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap'); /* font-family: 'Lato', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Cairo&family=PT+Sans:wght@700&family=Quicksand&display=swap'); /* font-family: 'Cairo', sans-serif; font-family: 'PT Sans', sans-serif; font-family: 'Quicksand', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap'); /* font-family: 'Inter', sans-serif; */
 
 /* Burger Menu */
 :root{
-	--primary-color: rgba(13, 110, 139, 0.45);
+	--primary-color: rgba(0, 17, 185, 0.7);
 	--overlay-color: rgba(24, 39, 51, 0.85);
 	--menu--speed: 0.75s;
 }
@@ -52,10 +54,12 @@ body{
 	justify-content: center;
 	text-align: center;
 	height: 100%;
+	font-family: 'Inter', sans-serif;
 }
 
 .showcase h1{
 	font-size: 4rem;
+	font-family: 'Roboto', sans-serif;
 }
 
 .showcase p{
@@ -71,6 +75,7 @@ body{
 	margin-top: 1rem;
 	text-decoration: none;
 	transition: opacity 1s ease-in;
+	font-family: 'Lato', sans-serif;
 }
 
 .btn:hover{
@@ -88,9 +93,10 @@ body{
 .content{
 	height: 100%;
 	width: 100%;
-	background-color: darkblue;
+	background-color: #002B51;
 	color: white;
 	font-size: 5vh;
+	font-family: 'Roboto', sans-serif;
 }
 
 .image{
@@ -120,7 +126,7 @@ body{
 }
 
 .footer{
-	background-color: darkred;
+	background-color: #120602;
 	height: 8vh;
 	text-align: center;
 	color: white;
@@ -133,16 +139,17 @@ body{
 }
 
 .footer2{
-	background-color: darkred;
+	background-color: #002B51;
 	height: 8;
 	text-align: center;
 	color: white;
 	padding-top: 10px;
-	padding-bottom: 25px;
+	padding-bottom: 20px;
+	margin-top: 1px;
 }
 
 .footer3{
-	background-color: darkred;
+	background-color: #002B51;
 	height: 8;
 	text-align: center;
 	color: white;
@@ -152,13 +159,13 @@ body{
 }
 
 .footer4{
-	background-color: darkred;
+	background-color: #002B51;
 	height: 8;
 	text-align: center;
 	color: white;
 	padding-top: 10px;
 	padding-bottom: 20px;
-	margin-top: 120px;
+	margin-top: 105px;
 }
 
 .footer4 p{
@@ -171,7 +178,6 @@ body{
 	color: white;
 	padding-top: 5px;
 }
-
 
 .contact_container{
 	border-radius: 5px;
@@ -208,12 +214,12 @@ body{
 
 .heading{
 	height: 20vh;
-	background-color: black;
+	background-color: #002B51;
 	color: white;
 	font-size: 7.5vh;
 	text-align: center;
 	margin-top: -70px;
-	padding-left: 200px;
+	padding-left: 300px;
 }
 
 .contact_container h2{
@@ -232,6 +238,8 @@ body{
 	padding-left: 400px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	height: 100%;
+	width: 100%;
 }
 
 .contact_container2 h2{
@@ -253,6 +261,8 @@ body{
 	padding-left: 400px;
 	margin-top: -50px;
 	padding-bottom: 10px;
+	height: 100%;
+	width: 100%;
 }
 
 .contact_container3 h2{
@@ -271,6 +281,8 @@ body{
 	padding-left: 400px;
 	margin-top: -50px;
 	padding-bottom: 10px;
+	height: 100%;
+	width: 100%;
 }
 
 .contact_container4 h2{
