--- a/menu.css
+++ b/menu.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap'); /* font-family: 'Lato', sans-serif; */
-
 .menu-wrap{
 	position: fixed;
 	top: 0;
@@ -143,7 +141,7 @@
 /* Start of nav code */
 .nav{
 	height: 10.5vh;
-	background-color: #002B51;
+	background-color: #A41316;
 	font-size: 16px;
 	font-family: 'Poppins', sans-serif;	
 	font-weight: bold;
@@ -180,35 +178,35 @@ ul a:active{color: black;} /* Selected link */
 .nav li a{
 	float: right;
 	font-size: 16px;
-	color: white;
+	color: black;
 	text-align: left;
 	padding: 14px;
 	text-decoration: none;
 	overflow: none;
 	z-index: 4;
 	font-family: 'Lato', sans-serif;
-	background-color: blue;
+	background-color: red;
   	border-radius: 10px;
 	margin-top: 10px;
 }
 
 li a:link{color: black;} /* Unvisited link */
 li a:visited{color: black;} /* Visited link */
-li a:hover{color: white; background-color: #020B64;} /* Mouse hover link */
+li a:hover{color: white; background-color: darkred;} /* Mouse hover link */
 li a:active{color: black;} /* Selected link */
 
 /* Log Out Nav Link */
 .nav ol a{
 	float: right;
 	font-size: 16px;
-	color: white;
+	color: black;
 	text-align: left;
 	padding: 14px;
 	text-decoration: none;
 	overflow: none;
 	z-index: 4;
 	font-family: 'Lato', sans-serif;
-	background-color: blue;
+	background-color: red;
   	border-radius: 10px;
 	margin-top: 10px;
 	margin-right: 10px;
@@ -216,5 +214,5 @@ li a:active{color: black;} /* Selected link */
 
 ol a:link{color: black;} /* Unvisited link */
 ol a:visited{color: black;} /* Visited link */
-ol a:hover{color: white; background-color: #020B64;} /* Mouse hover link */
+ol a:hover{color: white; background-color: darkred;} /* Mouse hover link */
 ol a:active{color: black;} /* Selected link */
