--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 
 .showcase:before{
 	content:'';
-	background: url('../images/') no-repeat center center/cover;
+	background: url('../images/index-backgroundv3.png') no-repeat center center/cover;
 	position: absolute;
 	top: 0;
 	left: 0;
