--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 
 .showcase:before{
 	content:'';
-	background: url('../images/index-backgroundv3.png') no-repeat center center/cover;
+	background: url('../images/index-backgroundv4.png') no-repeat center center/cover;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -91,7 +91,7 @@ body{
 }
 
 .content{
-	height: 100%;
+	height: 9vh;
 	width: 100%;
 	background-color: #002B51;
 	color: white;
@@ -99,10 +99,45 @@ body{
 	font-family: 'Roboto', sans-serif;
 }
 
+.content-song{
+	height: 60vh;
+	width: 100%;
+	background-color: #002B51;
+	color: white;
+	font-size: 5vh;
+	font-family: 'Roboto', sans-serif;
+	margin-top: -5px;
+}
+
+.content-song2{
+	margin-top: -320px;
+	margin-left: 325px;
+	padding-bottom: 10px;
+	background-color: #002B51;
+	color: white;
+	font-size: 5vh;
+}
+
+.content-song img{
+	margin-top: 20px;
+	margin-left: 10px;
+}
+
+.conent-song2 p{
+	margin-top: -1000000px;
+}
+	
+.content-song h3{
+	padding-left: 10px;
+	font-size: 4vh;
+}
+
 .image{
 	margin-top: 10px;
-	margin-left: 5px;
+	margin-left: 15px;
 	margin-bottom: 1px;
+	float: left;
+	background-color: white;
 }
 
 .image2{
@@ -116,6 +151,7 @@ body{
 	margin-left: 10px;
 	padding-top: 5px;
 	padding-bottom: 10px;
+	height: 10px;
 }
 
 .content p{
@@ -127,10 +163,11 @@ body{
 
 .footer{
 	background-color: #120602;
-	height: 8vh;
+	height: 10vh;
 	text-align: center;
 	color: white;
 	padding-top: 10px;
+	margin-top: 77px;
 }
 
 .footer p{
